# pfft

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CONVENTIONS  ChangeLog  Makefile.am  NEWS  README  README.rst  TODO  bootstrap.sh  configure.ac  fconfig.h.in  pfft.pc.in
api/: Makefile.am  api-adv.c  api-basic.c  build-f03-api.sh  f03-api.sh  f03-wrap.c  f03-wrap.sh  fortran-api.c  fortran-mangling.h  fortran-prototypes.h  fortran-wrappers.h  genf03-api.pl  genf03-wrap.pl  pfft.f.in  pfft.f03.in  pfft.h  pfft.h.expanded  pfftl.f03.in
build-aux/: fortran-depcomp  fortran-rules.am  get_autotools.sh  get_supplementary.sh
conf/: .travis-install-mpi.sh.swp  travis-install-fftw.sh
doc/: .gitignore  Makefile-sphinx  Makefile.am  bibliography.bib  conf.py  convert.sh  develop.rst  develop.tex  features.rst  features.tex  fortran.rst  fortran.tex  index.rst  install.rst  install.tex  interface.rst  interface.tex  intro.rst  intro.tex  latex-manual.sh  latexinc.sh.in  make.bat  man_fftw_3don1d.tex  manual.tex  pfft_manual.tex  preample.tex  reference.rst  reference.tex  shortcuts.tex  tutorial.rst  tutorial.tex
doc/code/: manual_min_c2c.c
gcell/: Makefile.am  gcells_RMA.c  gcells_plan.c  gcells_sendrecv.c  gctimer.c
kernel/: Makefile.am  block.c  check.c  ipfft.h  malloc.c  ousample.c  outrafo.c  partrafo-transposed.c  partrafo.c  procmesh.c  remap.c  remap_2dto1d.c  remap_3dto2d.c  sertrafo.c  timer.c  transpose.c
m4/: ac_fc_fixedform.m4  ac_fc_line_length.m4  ac_fc_module_extension.m4  ac_fc_module_flag.m4  ac_fc_pp_define.m4  ac_fc_pp_srcflag.m4  ac_prog_cc_c99.m4  acx_fc_library_ldflags_fix.m4  acx_fccpp.m4  acx_mpi.m4  acx_mpiexec.m4  am_path_vtk.m4  ax_blas.m4  ax_boost_unit_test_framework.m4  ax_cc_library_ldflags.m4  ax_check_compiler_flags.m4  ax_cxx_library_ldflags.m4  ax_diff_library_ldflags.m4  ax_disable.m4  ax_fc_integer_kind.m4  ax_fc_no_range_check.m4  ax_fcs_config.m4  ax_fcs_direct.m4  ax_fcs_fmm.m4  ax_fcs_package.m4  ax_fcs_types.m4  ax_filelist.m4  ax_fortran_depend.m4  ax_fortran_kinds.m4  ax_intrinsics.m4  ax_lapack.m4  ax_lib_fftw3.m4  ax_lib_pfft.m4  ax_lib_pnfft.m4  ax_prog_cc_mpi.m4  ax_prog_cxx_mpi.m4  ax_prog_f77_mpi.m4  ax_prog_fc_mpi.m4  ax_sort_lib.m4
scripts/: build_release_gcc.sh  install_pfft_bgp.sh  install_pfft_bgp_debug.sh  install_pfft_bgq.sh  install_pfft_bgq_debug.sh  install_pfft_chic.sh  install_pfft_gcc.sh  install_pfft_gcc_debug.sh  install_pfft_intel.sh  install_pfft_intel_debug.sh  install_pfft_jugene.sh  install_pfft_jugene_debug.sh  make_release_gcc.sh
tests/: .simple_check_r2c_transposed.c.swp  Makefile.am  adv_check_ghost_c2c.c  bench_c2c.c  bench_r2c.c  build_checks.sh  debug_simple_check_ghost_c2c_3d_on_3d.c  debug_simple_check_r2c_3d_on_3d_transposed_many.c  man_fftw_3don1d.c  man_fftw_3don1d.ctex  manual_c2c_3d.c  manual_min_c2c.c  minimal_check_c2c.c  minimal_check_c2c_transposed.c  minimal_test.c  pfft_crash.c  run_checks.sh  scale_c2c.c  scale_c2c_1d.c  serial_c2c.c  simple_check_c2c.c  simple_check_c2c_2d_on_2d.c  simple_check_c2c_3d_on_3d.c  simple_check_c2c_3d_on_3d_transposed.c  simple_check_c2c_4d.c  simple_check_c2c_4d_on_3d.c  simple_check_c2c_4d_on_3d_transposed.c  simple_check_c2c_4d_transposed.c  simple_check_c2c_float.c  simple_check_c2c_inplace.c  simple_check_c2c_ldouble.c  simple_check_c2c_newarray.c  simple_check_c2c_transposed.c  simple_check_c2c_transposed_inplace.c  simple_check_c2c_transposed_newarray.c  simple_check_c2r_c2c.c  simple_check_c2r_c2c_ousam_shifted.c  simple_check_c2r_c2c_shifted.c  simple_check_ghost_c2c.c  simple_check_ghost_c2c_3d_on_3d.c  (+50 more)
tests/f03/: Makefile.am  pfft_simple_test.F03  simple_check_c2c.F03  simple_check_c2c.f90  simple_check_c2c_transposed.F03  simple_check_c2c_transposed.f90  simple_check_ousam_c2c_4d_on_3d.F03  simple_check_ousam_c2c_4d_on_3d.f90  simple_check_ousam_c2c_4d_on_3d_transposed.F03  simple_check_ousam_c2c_4d_on_3d_transposed.f90  simple_check_ousam_r2c_4d_on_3d.F03  simple_check_ousam_r2c_4d_on_3d.f90  simple_check_ousam_r2c_4d_on_3d_transposed.F03  simple_check_ousam_r2c_4d_on_3d_transposed.f90  simple_check_r2c_4d_on_3d.F03  simple_check_r2c_4d_on_3d.f90  simple_check_r2c_4d_on_3d_transposed.F03  time_c2c.F03  time_c2c_transposed.F03
tests/fortran/: Makefile.am  simple_check_c2c.F90  simple_check_c2c_transposed.F90  simple_check_ghost_c2c.F90  simple_check_ghost_c2c_3d_on_3d.F90  simple_check_ousam_c2c.F90  simple_check_ousam_c2c_transposed.F90  simple_check_ousam_r2c.F90  simple_check_ousam_r2c_transposed.F90  simple_check_ousam_r2r.F90  simple_check_ousam_r2r_transposed.F90  simple_check_r2c.F90  simple_check_r2c_3d_on_3d.F90  simple_check_r2c_3d_on_3d_transposed.F90  simple_check_r2c_transposed.F90  simple_check_r2r.F90  simple_check_r2r_transposed.F90  simple_test.F90
tests/openmp/: Makefile.am  matrix_transpose.c  omp_bench_c2c.c  omp_simple_check_c2c_transposed.c  simple_check_c2c.c  simple_check_c2c_omp.c  simple_check_c2c_transposed.c  transpose_check_fftw.c
util/: Makefile.am  getargs.c  util.c  util.h
